sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-service    # < name of the service
  namespace: sonarr # < namespace where place the deployment and pods
spec:
  selector:
    app: sonarr # < reference to the deployment (connects with this deployment)
  ports:
    - name: webinterface
      protocol: TCP
      port: 8989
