sonarr/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-ingress
  namespace: sonarr
  annotations: 
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.olympus.mangelschots.org`)
      kind: Rule
      services:
        - name: sonarr-service
          port: 8989
  tls:
    secretName: olympus-mangelschots-org-tls
